# voyager-vpm

./: .env.example  .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml  security-audit.yml
src/: context.rs  error.rs  lib.rs  main.rs  term.rs
src/cli/: args.rs  mod.rs
src/commands/: add.rs  fetch.rs  generate.rs  info.rs  init.rs  list.rs  lock.rs  mod.rs  remove.rs  validate.rs
src/config/: manifest.rs  mod.rs  validation.rs
src/domain/: mod.rs  release.rs  repository.rs
src/infra/: filesystem.rs  github.rs  http.rs  mod.rs  retry.rs
src/lock/: lockfile.rs  mod.rs  package_manifest.rs
src/output/: mod.rs  vpm.rs
src/services/: hash_checker.rs  index_generator.rs  manifest_lock_tx.rs  mod.rs  package_fetcher.rs  url_validator.rs
tests/: cli_e2e_test.rs  integration_test.rs
tests/common/: mod.rs
