[package]
name = "voyager"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/Limitex/voyager-vpm"

[[bin]]
name = "voy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
cliclack = "0.3"
console = "0.15"
indicatif = "0.18.3"
dotenvy = "0.15"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
octocrab = { version = "0.49.5", default-features = false, features = ["default-client", "follow-redirect", "jwt-aws-lc-rs", "retry", "rustls", "rustls-ring", "timeout", "tracing"] }
rustls = { version = "0.23", features = ["ring"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
semver = "1"

[dev-dependencies]
mockall = "0.14.0"
wiremock = "0.6"
tempfile = "3.24.0"
tokio-test = "0.4"
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
